fix: Global overflow hidden and hidden scrollbar
Fixes the problem of every element overflowing and not being able to scroll. This was caused by the overflow: hidden property being applied to the body element. The commit also hides the scrollbar to improve the overall look and feel of the application.

--- a/frontend/assets/styles/main.sass
+++ b/frontend/assets/styles/main.sass
@@ -38,13 +38,14 @@
     100%
         rotate: -45deg
         translate: -200vh -100px
-*
-    overflow: hidden !important
 body
+    overflow: hidden !important
     color: $color-paragraph !important
     background: $color-background !important
     margin: 0 !important
     font-family: "Roboto" ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    &::-webkit-scrollbar
+        display: none
     h1,h2,h3,h4,h5,h6
         color: $color-headline !important
     .text-field
